--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h2>Supervisor</h2>
             <p>Monitors activity to identify project roadblocks</p>
             <div class="icon">
-                <img src="images/icon-supervisor.svg" alt="">
+                <img src="./images/icon-supervisor.svg" alt="">
             </div>
             
             </div>
@@ -42,7 +42,7 @@
             <h2>Team Builder</h2>
             <p>Scans our talent network to create the optimal team for your project</p>
             <div class="icon">
-                <img src="images/icon-team-builder.svg" alt="">
+                <img src="./images/icon-team-builder.svg" alt="">
             </div>
             </div>
 
@@ -50,7 +50,7 @@
             <h2>Karma</h2>
             <p>Regularly evaluates our talent to ensure quality</p>
             <div class="icon">
-                <img src="images/icon-karma.svg" alt="">
+                <img src="./images/icon-karma.svg" alt="">
             </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
             <h2>Calculator</h2>
             <p>Uses data from past projects to provide better delivery estimates</p>
             <div class="icon">
-                <img src="images/icon-calculator.svg" alt="">
+                <img src="./images/icon-calculator.svg" alt="">
             </div>
             </div>
 
