from __Blank to _Blank

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <footer>
         <p class="attribution">
           Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-          Coded by <a href="https://twitter.com/elissartawaifi" target="__Blank">Elissar Tawaifi</a>.
+          Coded by <a href="https://twitter.com/elissartawaifi" target="_Blank">Elissar Tawaifi</a>.
         </p>
       </footer>
 </body>
